generated/checkers/gen/AllGen-Buffer-Overflow-81137162bfaa7278785b24c1fd2e9e74f082e8e4/build_logs/syntax-repair-01/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:47:28: error: expected initializer before ‘unwrapArrayDecayImpl’
   47 | const Expr *SAGEN_NOEXCEPT unwrapArrayDecayImpl(const Expr *E) {
      |                            ^~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::Expr* {anonymous}::SAGenTestChecker::unwrapArrayDecay(const clang::Expr*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:63:10: error: ‘unwrapArrayDecayImpl’ was not declared in this scope; did you mean ‘unwrapArrayDecay’?
   63 |   return unwrapArrayDecayImpl(E);
      |          ^~~~~~~~~~~~~~~~~~~~
      |          unwrapArrayDecay
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static void {anonymous}::SAGenTestChecker::report(clang::ento::CheckerContext&, const clang::ento::CallEvent&, llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:137:54: error: invalid use of member ‘{anonymous}::SAGenTestChecker::BT’ in static member function
  137 |   auto R = std::make_unique<PathSensitiveBugReport>(*BT, Msg, N);
      |                                                      ^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:30:37: note: declared here
   30 |    mutable std::unique_ptr<BugType> BT;
      |                                     ^~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
